# pi-Board-Project

./: CMakeLists.txt  Main.qml  WeatherData.h  WeatherDataManager.cpp  WeatherDataManager.h  WeeklyWeatherModel.cpp  WeeklyWeatherModel.h  main.cpp
